adicionando imagens e os primeiros style guides

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolorum ad repudiandae quibusdam accusamus assumenda architecto, consectetur perspiciatis sint quas eveniet inventore excepturi dicta. Officia iste non voluptatibus? Itaque, corrupti?</p>
 </body>
 
 </html>
