--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolorum ad repudiandae quibusdam accusamus assumenda architecto, consectetur perspiciatis sint quas eveniet inventore excepturi dicta. Officia iste non voluptatibus? Itaque, corrupti?</p>
+    <nav>
+        <a href="#" id="logo">
+            <img src="./assets/icons/Logo.svg" alt="Logo Marca">
+        </a>
+
+        <ul>
+            <li><a href="#"><img src="./assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa"></a></li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas viagens</a></li>
+            <li><a href="#">
+                    <img src="./assets/images/isabela-torres.png" alt="Isabela Torres">
+                </a></li>
+        </ul>
+    </nav>
+    <header>
+
+    </header>
 </body>
 
 </html>
