--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 </head>
 
 <body>
-    <nav>
-        <a href="#" id="logo">
-            <img src="./assets/icons/Logo.svg" alt="Logo Marca">
-        </a>
+    <div class="bg-surface-color">
+        <nav class="container">
+            <a href="#" id="logo">
+                <img src="./assets/icons/Logo.svg" alt="Logo Marca">
+            </a>
 
-        <ul>
-            <li><a href="#"><img src="./assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa"></a></li>
-            <li><a href="#">Explorer</a></li>
-            <li><a href="#">Minhas viagens</a></li>
-            <li><a href="#">
-                    <img src="./assets/images/isabela-torres.png" alt="Isabela Torres">
-                </a></li>
-        </ul>
-    </nav>
+            <ul>
+                <li><a href="#"><img src="./assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa"></a></li>
+                <li><a href="#">Explorer</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#">
+                        <img src="./assets/images/isabela-torres.png" alt="Isabela Torres">
+                    </a></li>
+            </ul>
+        </nav>
+    </div>
+
     <header>
 
     </header>
