--- a/index.html
+++ b/index.html
@@ -27,11 +27,39 @@
                     </a></li>
             </ul>
         </nav>
+
+
+        <header>
+            <div class="container">
+                <div class="profile">
+                    <img src="assets/images/isabela-torres.png" alt="Imagem da Isabela Torres">
+                </div>
+                <div>
+                    <h1>Isabela Torres</h1>
+                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️
+                        Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+                </div>
+
+                <div id="info">
+                    <li>
+                        <img src="./assets/icons/MapPin.svg" alt="Ícone de mapa">
+                        <span>São Paulo, Brazil</span>
+                    </li>
+
+                    <li>
+                        <img src="./assets/icons/AirplaneTilt.svg" alt="Ícone de avião">
+                        <span>37 paises</span>
+                    </li>
+
+                    <li>
+                        <img src="./assets/icons/Image.svg" alt="ìcone de imagem">
+                        <span>240 fotos</span>
+                    </li>
+                </div>
+            </div>
+        </header>
+
     </div>
-
-    <header>
-
-    </header>
 </body>
 
 </html>
