--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travelgram | Perfil de viagens</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <title>Travelgram | Perfil de Viagens</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, neque dignissimos minima velit totam rerum odit quia, optio provident culpa illo. Reiciendis itaque nesciunt quis harum labore, blanditiis repellat eum!</p>
-</body>
+    <h1>
+        Teste
+    </h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ex cumque debitis. Voluptates dolor quaerat nesciunt nemo quasi doloremque laborum suscipit voluptas distinctio tempore! Doloremque cum debitis nihil natus impedit.</p>
+</body>
 </html>
