--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travelgram | Perfil de Viagens</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1>
-        Teste
-    </h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ex cumque debitis. Voluptates dolor quaerat nesciunt nemo quasi doloremque laborum suscipit voluptas distinctio tempore! Doloremque cum debitis nihil natus impedit.</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Travelgram | Perfil de Viagens</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="bg-surface-color">
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="./assets/icons/Logo.svg" alt="Logo">
+      </a>
+
+      <ul id="primary-menu">
+        <li>
+          <a href="#">
+            <img src="./assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa">
+          </a>
+        </li>
+        <li><a href="#">Explorer</a></li>
+        <li><a href="#">Minhas Viagens</a></li>
+        <li><a href="#">
+            <img src="./img/prifile-icon.png" alt="Isabela Torres">
+          </a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <header>
+  </header>
 </body>
+
 </html>
