--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
     <img src="./assets/images/Image 11.png" alt="...">
     <img src="./assets/images/Image 12.png" alt="...">
   </main>
+
+  <footer class="container">
+    <span>Travelgram &copy; 2025</span>
+    <span>Termos de Uso</span>
+    <span>Plítica de Privacidade</span>
+  </footer>
+
 </body>
 
 </html>
